--- a/.gitignore
+++ b/.gitignore
@@ -109,8 +109,9 @@ Dependencies/
 
 fastlane/report.xml
 fastlane/Preview.html
-fastlane/screenshots/**/*.png
+fastlane/screenshots
 fastlane/test_output
+fastlane/metadata
 
 # Code Injection
 #
